add geo-location to TaxiOrderService and DeliveryOrderService